[package]
name = "llama-rust-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
rocket = { version = "0.5.0-rc.3", features = ["json"] }
serde = "1.0"
clap = { version = "4.3.0", features = ["derive"] }

[build-dependencies]
cc = { version = "1.0" }
bindgen = "0.65"